add script to package.json file

--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "JATE",
+  "name": "DTE",
   "scripts": {
     "dev": "webpack-dev-server",
     "build": "webpack --mode production",
     "start": "webpack --watch"
   },
-  "author": "2U",
+  "author": "2U & Sienna",
   "license": "UNLICENSED",
   "devDependencies": {
     "@babel/core": "^7.15.0",
